--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,9 @@
 <%= stylesheet_link_tag 'about', media: 'all', 'data-turbolinks-track' => true %>
-
+<%
+meta title: "Meusetech - A propos ",
+     description:"",
+     keywords: ["Meusetech", "A propos", "about", 'Pourquoi', "Qui somme nous" ]
+%>
 <header>
   <div class="container-fluid">
     <div class="row">
