--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
+<%
+meta title: "Meusetech - Accueil",
+     description: "Pour aider les entreprises, le développement des services à la personne, la valorisation et la préservation de l’environnement du Pays de Verdun... ",
+     keywords: ["Meusetech", "Home",  'Accueil']
+%>
 <%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track' => true %>
     <header>
       <div class="container-fluid">
