--- a/app/views/pages/legals.html.erb
+++ b/app/views/pages/legals.html.erb
@@ -1,72 +1,107 @@
-<h1>
-  MENTIONS LEGALES
-</h1>
+<%
+meta title: "Meusetech - Mentions légales",
+     description: "Pour aider les entreprises, le développement des services à la personne, la valorisation et la préservation de l’environnement du Pays de Verdun... ",
+     keywords: ["Meusetech", "legals",  'mentions']
+%>
+<%= stylesheet_link_tag 'front/legals', media: 'all', 'data-turbolinks-track' => true %>
 
-<p>
-  Informations légales obligatoires & Copyrights
-</p>
+<header>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1 class="text-center">
+          MENTIONS LEGALES
+        </h1>
+        <ul>
+          <li>Informations légales obligatoires & Copyrights</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
+<div class="container" style="margin-top : 45px; margin-bottom: 45px;">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3><i class="fa fa-pencil"  aria-hidden="true"></i> Editeur</h3>
+      <ul>
+        <li>
+          <address>
+            Site officiel de MeuseTech <br>
+              Pays de Verdun <br>
+              ZA Les Marronniers <br>
+              55100 Charny-sur-Meuse <br>
+          </address>
+        </li>
+        <li>Téléphone : <a href="tel:+33329834401">03 29 83 44 01</a></li>
+        <li>Email : <a href="mailto:contact@meusetech.fr">contact@meusetech.fr</a></li>
+      </ul>
 
-<h5>Editeur</h5>
+      <h3><i class="fa fa-user"  aria-hidden="true"></i> Directeur de la publication :</h3>
+      <ul>
+        <li>Julien DIDRY, Président du Pays de Verdun</li>
+      </ul>
 
-<ul>
-  <li>Site officiel de MeuseTech <br>
-      Pays de Verdun <br>
-      ZA Les Marronniers <br>
-      55100 Charny-sur-Meuse <br>
-  </li>
-  <li>Téléphone : 03 29 83 44 01</li>
-  <li>Email : contact@meusetech.fr</li>
-</ul>
+      <h3><i class="fa fa-database" aria-hidden="true"></i> Hébergeur</h3>
+      <ul>
+        <li>?</li>
+      </ul>
 
-<h5>Directeur de la publication :</h5>
-<ul>
-  <li>Julien DIDRY, Président du Pays de Verdun</li>
-</ul>
+      <h3><i class="fa fa-briefcase" aria-hidden="true"></i> Conception & réalisation</h3>
+      <ul>
+        <li>©Devogreen</li>
+        <li><a href="http://www.devogreen.fr">www.devogreen.fr</a></li>
+      </ul>
 
-<h5>Hébergeur</h5>
-<ul>
-  <li>?</li>
-</ul>
+      <h3><i class="fa fa-camera" aria-hidden="true"></i> Crédits photographiques, illustrations et maquettes graphiques :</h3>
+      <ul>
+        <li>©Pays de Verdun</li>
+        <li>©Devogreen</li>
+      </ul>
 
-<h5>Conception & réalisation</h5>
-<ul>
-  <li>©Devogreen</li>
-  <li>www.devogreen.fr</li>
-</ul>
+      <h3><i class="fa fa-laptop" aria-hidden="true"></i> Informatique et libertés</h3>
+      <p>
+        Chaque internaute ayant déposé des informations nominatives le concernant sur le site dispose des droits d'opposition (article 38 de la loi), d'accés (articles 39, 41 et 42 de la loi) et de rectification (article 40 de la loi) de ces données. Ainsi, il peut exiger que soient rectifiées, complétées, clarifiées, mises à jour ou effacées les informations le concernant qui sont inexactes, incomplètes, équivoques, périmées, ou dont la collecte ou l'utilisation, la communication ou la conservation est interdite.
+        Chaque internaute peut exercer ces droits en écrivant à :<br>
+        <br>
+        <address>
+          Site officiel de MeuseTech <br>
+          Pays de Verdun <br>
+          ZA Les Marronniers <br>
+          55100 Charny-sur-Meuse <br>
+          <a href="tel:+33329834401">03 29 83 44 01</a><br>
+          <a href="mailto:contact@meusetech.fr">contact@meusetech.fr</a><br>
+        </address>
+      </p>
 
-<h5>Crédits photographiques, illustrations et maquettes graphiques :</h5>
-<ul>
-  <li>©Pays de Verdun</li>
-  <li>©Devogreen</li>
-</ul>
+      <h3><i class="fa fa-creative-commons" aria-hidden="true"></i> Propriété intellectuelle / Droits concédés aux utilisateurs</h3>
+      <p>
+        L'éditeur et/ou ses partenaires sont les titulaires exclusifs de tous les droits de propriété intellectuelle portant tant sur la structure que sur le contenu du site, et ce dans le monde entier.
+        L'éditeur consent à l'utilisateur le droit de reproduire tout ou partie du contenu du site pour stockage aux fins de représentation sur l'écran de votre ordinateur personnel et de reproduction, en un exemplaire, pour copie de sauvegarde ou tirage sur papier. Ce droit est consenti dans le cadre d'un usage strictement personnel, privé et non collectif. Toute mise en réseau, toute rediffusion ou commercialisation, sous quelque forme même partielle, est strictement interdite. Ce droit est personnel, il est réservé à l'usage exclusif et non collectif du licencié. Il n'est transmissible en aucune manière. Tout autre usage est soumis à autorisation préalable et expresse. La violation de ces dispositions impératives soumet le contrevenant, et toutes personnes responsables, aux peines pénales et civiles prévues par la loi.
+        Nonobstant les droits de reproduction et de stockage tels que strictement définis ci-dessus, et sauf autorisation préalable et expresse de l'éditeur, l'internaute s'interdit de reproduire et/ou d'utiliser les marques et logos présents sur le site, ainsi que de modifier, copier, traduire, reproduire, vendre, publier, exploiter et diffuser dans un format numérique ou autre, tout ou partie des informations, textes, photos, images, vidéos et données présentes sur ce site. La violation de ces dispositions impératives soumet le contrevenant, et toutes personnes responsables, aux peines pénales et civiles prévues par la loi.
+      </p>
 
-<h5>Informatique et libertés</h5>
-<p>
-  Chaque internaute ayant déposé des informations nominatives le concernant sur le site dispose des droits d'opposition (article 38 de la loi), d'accés (articles 39, 41 et 42 de la loi) et de rectification (article 40 de la loi) de ces données. Ainsi, il peut exiger que soient rectifiées, complétées, clarifiées, mises à jour ou effacées les informations le concernant qui sont inexactes, incomplètes, équivoques, périmées, ou dont la collecte ou l'utilisation, la communication ou la conservation est interdite.
-  Chaque internaute peut exercer ces droits en écrivant à :<br>
-  Site officiel de MeuseTech <br>
-  Pays de Verdun <br>
-  ZA Les Marronniers <br>
-  55100 Charny-sur-Meuse <br>
-</p>
+      <h3><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Limitation de responsabilité</h3>
+      <p>
+        Ce site comporte des informations mises à disposition par des sociétés externes ou des liens hypertextes vers d'autres sites qui n'ont pas été développés par l'éditeur. Ces contenus sont fournis à titre informatif. L'existence d'un lien vers un autre site ne constitue pas une validation de ce site ou de son contenu. Il appartient à l'internaute d'utiliser ces informations avec discernement et esprit critique. La responsabilité l'éditeur ne saurait être engagée du fait des informations, opinions et recommandations formulées par des tiers sur d'autres sites.
+      </p>
 
-<h5>Propriété intellectuelle / Droits concédés aux utilisateurs</h5>
-<p>
-  L'éditeur et/ou ses partenaires sont les titulaires exclusifs de tous les droits de propriété intellectuelle portant tant sur la structure que sur le contenu du site, et ce dans le monde entier.
-  L'éditeur consent à l'utilisateur le droit de reproduire tout ou partie du contenu du site pour stockage aux fins de représentation sur l'écran de votre ordinateur personnel et de reproduction, en un exemplaire, pour copie de sauvegarde ou tirage sur papier. Ce droit est consenti dans le cadre d'un usage strictement personnel, privé et non collectif. Toute mise en réseau, toute rediffusion ou commercialisation, sous quelque forme même partielle, est strictement interdite. Ce droit est personnel, il est réservé à l'usage exclusif et non collectif du licencié. Il n'est transmissible en aucune manière. Tout autre usage est soumis à autorisation préalable et expresse. La violation de ces dispositions impératives soumet le contrevenant, et toutes personnes responsables, aux peines pénales et civiles prévues par la loi.
-  Nonobstant les droits de reproduction et de stockage tels que strictement définis ci-dessus, et sauf autorisation préalable et expresse de l'éditeur, l'internaute s'interdit de reproduire et/ou d'utiliser les marques et logos présents sur le site, ainsi que de modifier, copier, traduire, reproduire, vendre, publier, exploiter et diffuser dans un format numérique ou autre, tout ou partie des informations, textes, photos, images, vidéos et données présentes sur ce site. La violation de ces dispositions impératives soumet le contrevenant, et toutes personnes responsables, aux peines pénales et civiles prévues par la loi.
-</p>
+      <h3><i class="fa fa-envelope-o" aria-hidden="true"></i> Messagerie :</h3>
+      <ul>
+        <li>Pour toute suggestion, réaction concernant le fonctionnement de ce site, écrivez à : contact@meusetech.fr </li>
+        <li>Les messages électroniques sont conservés pendant la durée de leur traitement. les droits d'accès et de rectification s'exercent auprès : contact@meusetech.fr </li>
+      </ul>
+      <br>
+      <div class="alert alert-danger">
+        <div class="row">
+          <div class="col-xs-1" style="text-align:center;">
+            <i class="fa fa-exclamation-triangle" aria-hidden="true" style="font-size: 3em;text-align: center;vertical-align: middle;display: inline-block;"></i>
+          </div>
+          <div class="col-xs-11">
+            Important : les messages que vous nous ferez parvenir par l'intermédiaire d'internet peuvent être interceptés sur le réseau. jusqu'à ce qu'ils nous parviennent, leur confidentialité ne peut être garantie. assurez-vous de ne pas divulguer d'informations personnelles inutiles ou sensibles.
+          </div>
+        </div>
+      </div>
 
-<h5>Limitation de responsabilité</h5>
-<p>
-  Ce site comporte des informations mises à disposition par des sociétés externes ou des liens hypertextes vers d'autres sites qui n'ont pas été développés par l'éditeur. Ces contenus sont fournis à titre informatif. L'existence d'un lien vers un autre site ne constitue pas une validation de ce site ou de son contenu. Il appartient à l'internaute d'utiliser ces informations avec discernement et esprit critique. La responsabilité l'éditeur ne saurait être engagée du fait des informations, opinions et recommandations formulées par des tiers sur d'autres sites.
-</p>
-
-<h5>Messagerie :</h5>
-<ul>
-  <li>Pour toute suggestion, réaction concernant le fonctionnement de ce site, écrivez à : contact@meusetech.fr </li>
-  <li>Les messages électroniques sont conservés pendant la durée de leur traitement. les droits d'accès et de rectification s'exercent auprès : contact@meusetech.fr </li>
-</ul>
-<p>
-  Important : les messages que vous nous ferez parvenir par l'intermédiaire d'internet peuvent être interceptés sur le réseau. jusqu'à ce qu'ils nous parviennent, leur confidentialité ne peut être garantie. assurez-vous de ne pas divulguer d'informations personnelles inutiles ou sensibles.
-</p>
+    </div>
+  </div>
+</div>
