--- a/app/views/partials/frontend/_footer.html.erb
+++ b/app/views/partials/frontend/_footer.html.erb
@@ -34,8 +34,8 @@
           <span><a href="#">Réalisé par DeVoGreen</a></span>
         </div>
         <div class="socials pull-right">
-          <i class="fa fa-facebook"></i>
-          <i class="fa fa-twitter"></i>
+          <a href="https://www.facebook.com/meusetech"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/meusetech"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
