--- a/app/views/partials/frontend/_menu.html.erb
+++ b/app/views/partials/frontend/_menu.html.erb
@@ -4,8 +4,8 @@
           <div class="row">
             <div class="col-xs-12">
               <div id="socialLink" class="col-xs-2">
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/meusetech"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/meusetech"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               </div>
               <div id="userBar" class="col-xs-10">
                 <% if !user_signed_in? %>
