--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,9 @@
 <%= stylesheet_link_tag 'front/projets/index', media: 'all', 'data-turbolinks-track' => true %>
+<%
+meta title: "Meusetech - Projets",
+     description: "Pour aider les entreprises, le développement des services à la personne, la valorisation et la préservation de l’environnement du Pays de Verdun... Voici la liste des projets mis en ligne et soutenu par nos soins ",
+     keywords: ["Meusetech", "Projets",  'Liste']
+%>
 <header>
   <div class="container-fluid">
     <div class="row">
