--- a/app/assets/stylesheets/front/_footer.scss
+++ b/app/assets/stylesheets/front/_footer.scss
@@ -77,9 +77,17 @@ footer {
     font-size: 28px;
     color: white;
     padding-right: 100px;
-    i {
-      padding-left: 20px;
-      padding-right: 20px;
+    a , a:visited , a:focus, {
+      color:white;
+      transition: all 250ms;
+      &:hover{
+        color:$primary;
+      }
+      i {
+        padding-left: 20px;
+        padding-right: 20px;
+      }
     }
+
   }
 }
