--- a/app/assets/stylesheets/front/articles/index.scss
+++ b/app/assets/stylesheets/front/articles/index.scss
@@ -1,10 +1,11 @@
 header {
   text-align: center;
-  background-color: rgb(255, 235, 228);
+  background-color: #c5eaf7;
   padding-top: 5%;
   padding-bottom: 5%;
   h1  {
     text-transform: uppercase;
+    color: darken(#c5eaf7, 65%);
   }
   ul {
     padding: 0;
@@ -13,6 +14,7 @@ header {
     li {
       float: left;
       padding-left: 5px;
+      color: darken(#c5eaf7, 65%);
       &:after {
         content: " / ";
       }
