--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,8 @@
+<%
+meta title: "Meusetech - Blog",
+     description: "Vous retrouverez l'actualité ",
+     keywords: ["Meusetech", "Blog",  'Innovations']
+%>
 <%= stylesheet_link_tag 'front/articles/index', media: 'all', 'data-turbolinks-track' => true %>
 <header>
   <div class="container-fluid">
