--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Meusetech</title>
   <%= stylesheet_link_tag    'application', media: 'all', data: { turbolinks: 'true' }  %>
   <%= javascript_include_tag 'application', data: { turbolinks: 'true' }  %>
   <%= csrf_meta_tags %>
+  <%= metamagic %>
+
 </head>
 <body>
   <% #= render "partials/frontend/sidebar_left" %>
