Add twitter plugin

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -174,7 +174,15 @@ meta title: "Meusetech - Accueil",
             <%= inline_svg("svg/OiseauMT.svg") %>
           </div>
           <div class="col-xs-7" id="PanneauReseauxSociaux">
-            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fmeusetech%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+            <div class="row">
+              <div class="col-xs-6" style="    height: 65vh;">
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fmeusetech%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="65vh" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+
+              </div>
+              <div class="col-xs-6" style="    height: 65vh;">
+                <a class="twitter-timeline" data-lang="fr" data-height="65vh" data-width="340" data-link-color="#FAB81E" href="https://twitter.com/meusetech">Tweets by meusetech</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+              </div>
+            </div>
 
           </div>
         </div>
