--- a/app/assets/stylesheets/front/projets/index.scss
+++ b/app/assets/stylesheets/front/projets/index.scss
@@ -1,6 +1,14 @@
 @import "../vars";
+
 body {
     margin-top: 101px;
+}
+
+.btn-primary {
+  background-color: $primary;
+  &:hover {
+    background-color: darken($primary, 15%);
+  }
 }
 
 header {
