--- a/app/assets/stylesheets/front/surveys/index.scss
+++ b/app/assets/stylesheets/front/surveys/index.scss
@@ -1,11 +1,15 @@
 @import "../vars";
+
+$primary: #DC6350;
+
 header {
   text-align: center;
-  background-color: rgb(247, 243, 205);
+  position: relative;
   padding-top: 5%;
+  background:  asset-url("verdun_03.jpg") top left no-repeat;
   padding-bottom: 5%;
   h1  {
-
+    color: white;
     text-transform: uppercase;
   }
   ul {
@@ -15,6 +19,7 @@ header {
     li {
       float: left;
       padding-left: 5px;
+      color: white;
       &:after {
         content: " / ";
       }
@@ -22,6 +27,145 @@ header {
         &:after {
           content: " "
         }
+      }
+    }
+  }
+  &:before {
+    content: " ";
+    position: absolute;
+    top: 0; bottom: 0; left: 0; right: 0;
+    background-color: rgba($primary, 0.4);
+  }
+}
+
+#survey__infos {
+  margin-bottom: 150px;
+  padding-top: 50px;
+  padding-bottom: 25px;
+  #survey__infos--text {
+    line-height: 2em;
+    font-size: 1.2em;
+    padding: 20px;
+    padding-left: 150px;
+    h2  {
+      text-align: center;
+      color: $primary;
+    }
+  }
+  #survey__infos--image {
+    text-align: right;
+    padding-right: 150px;
+  }
+}
+
+
+#catchPhrase {
+  #catchPhraseBlock-repere {
+    position: relative;
+    #catchPhraseBlock {
+       background-color:lighten($primary, 5%);
+       #catchPhraseBlock-content {
+         padding-top:40px;
+         padding-bottom:40px;
+         border:2px solid white;
+         position: relative;
+         text-align: center;
+         color: white;
+         h4 {
+           margin: 0;
+           padding:0;
+           font-size:2em;
+           line-height: 2em;
+         }
+         .btn {
+               vertical-align: super;
+         }
+       }
+    }
+  }
+}
+
+@media screen and (min-width:768px) {
+  #catchPhrase {
+    #catchPhraseBlock-repere {
+      #catchPhraseBlock {
+        position:absolute;
+        top:-65px;
+        left:0;
+         height:100px;right:0;
+         background-color:lighten($primary, 5%);
+         #catchPhraseBlock-content {
+           padding-top:0;
+           padding-bottom:0;
+           margin-left:75px;
+           margin-right:75px;
+           margin-top:20px;
+           margin-bottom:20px;
+           border:2px solid white;
+           position: relative;
+           text-align: center;
+           color: white;
+
+           h4 {
+             margin: 0;
+             padding:0;
+             font-size:2em;
+             line-height: 2em;
+             display : inline-block;
+           }
+         }
+      }
+    }
+  }
+}
+
+@media screen and (min-width:992px) {
+  #catchPhrase {
+    #catchPhraseBlock-repere {
+      #catchPhraseBlock {
+         height:130px;
+         #catchPhraseBlock-content {
+           img {
+             position: absolute;
+             top: -100px;
+             left: -100px;
+           }
+           h4 {
+             font-size:2.5em;
+             line-height: 2.5em;
+             padding-right: 50px;
+           }
+         }
+      }
+    }
+  }
+}
+@media screen and (min-width:1200px) {
+  #catchPhrase {
+    #catchPhraseBlock-repere {
+      #catchPhraseBlock {
+        position:absolute;
+        top:-65px;
+        left:0;
+         height:130px;right:0;
+        background-color:lighten($primary, 5%);
+         #catchPhraseBlock-content {
+           margin-left:150px;
+           margin-right:150px;
+           img {
+             position: absolute;
+             top: -100px;
+             left: -50px;
+           }
+           h4 {
+             margin: 0;
+             padding:0;
+             font-size:2.5em;
+             line-height: 2.5em;
+             padding-right: 50px;
+             display : inline-block;
+           }
+         }
       }
     }
   }
