--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -18,11 +18,43 @@ meta title: "Meusetech - Sondages",
     </div>
   </div>
 </header>
-<section>
+<section id="survey__infos" >
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
-        <% @surveys.each do | survey | %>
+      <div class="col-xs-6" id="survey__infos--text">
+        <h2>Dans quel but ?</h2>
+        <p>
+          Pour favoriser le lien social, le développement économique, les services à la population, pour faciliter la mobilité, les transports, pour améliorer l’habitat, pour promouvoir un territoire moderne et dynamique, pour préserver et valoriser l’environnement de la Meuse, participez aux courts sondages proposés tout au long de l’année !
+        </p>
+      </div>
+      <div class="col-xs-6" id="survey__infos--image">
+        <%= image_tag "laptop2.png" %>
+      </div>
+    </div>
+  </div>
+</section>
+<section id="catchPhrase">
+  <div class="container">
+    <div class="row">
+      <div id="catchPhraseBlock-repere">
+        <div id="catchPhraseBlock">
+          <div id="catchPhraseBlock-content">
+            <h4>C'est simple est rapide ! </h4>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section style="margin-top: 200px;">
+  <div class="container">
+
+    <div class="row">
+        <% @surveys.each_with_index do | survey, index | %>
+
+          <% if index === 0  %>
+            <div class="col-xs-12">
               <h2><%= link_to survey.title , survey_path( survey.id ) %> <%= (survey.end_at > Date.today) ? "<span class='label label-warning pull-right'>En cours</span>".html_safe : "<span class='label label-danger pull-right'>Terminé</span>".html_safe %></h2>
               <p>
                 <%= raw survey.description %>
@@ -37,8 +69,28 @@ meta title: "Meusetech - Sondages",
               <% else %>
                 <%= link_to "Voir les résultats" , surveyStats_url( survey.id ), class: "pull-right btn btn-default" %>
               <% end %>
+            </div>
+          <% else %>
+            <div class="col-xs-4">
+              <h2><%= link_to survey.title , survey_path( survey.id ) %> <%= (survey.end_at > Date.today) ? "<span class='label label-warning pull-right'>En cours</span>".html_safe : "<span class='label label-danger pull-right'>Terminé</span>".html_safe %></h2>
+              <p>
+                <%= raw survey.description %>
+              </p>
+              <%= survey.nbUsersResponded.size %> utilisateur<%= (survey.nbUsersResponded.size > 1 ) ? "s": "" %> <%= (survey.nbUsersResponded.size > 1 ) ? "ont": "a" %> répondu<%= (survey.nbUsersResponded.size > 1 ) ? "s": "" %></li>
+              <% if survey.end_at > Date.today %>
+                <% if user_signed_in? %>
+                  <%= link_to "Participer au sondage" , survey_url( survey.id ), class: "pull-right btn btn-default" %>
+                <% else %>
+                  <%= link_to "Participer au sondage" , new_session_path(:user), class:'pull-right btn btn-default' %>
+                <% end %>
+              <% else %>
+                <%= link_to "Voir les résultats" , surveyStats_url( survey.id ), class: "pull-right btn btn-default" %>
+              <% end %>
+            </div>
+          <% end %>
+
+
         <% end %>
       </div>
-    </div>
   </div>
 </section>
