--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
   <%= stylesheet_link_tag    'application', media: 'all', data: { turbolinks: 'true' }  %>
   <%= javascript_include_tag 'application', data: { turbolinks: 'true' }  %>
+  <%= javascript_include_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js", "data-turbolinks-eval" => false %>
+  
   <%= csrf_meta_tags %>
   <%= metamagic %>
 
