--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -176,7 +176,7 @@ meta title: "Meusetech - Accueil",
           <div class="col-xs-7" id="PanneauReseauxSociaux">
             <div class="row">
               <div class="col-xs-6" style="    height: 65vh;">
-                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fmeusetech%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="65vh" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fmeusetech%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&708003905969064" width="340" height="65vh" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
               </div>
               <div class="col-xs-6" style="    height: 65vh;">
@@ -192,7 +192,20 @@ meta title: "Meusetech - Accueil",
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-offset-5 col-xs-7">
-            Liste des partenaires
+            <div class="owl-carousel2">
+              <div class="item">
+                <%= image_tag( "logo/gest-numerique.png",  alt: "image article")%>
+              </div>
+              <div class="item">
+                <%= image_tag( "logo/Logo_Leader.png",  alt: "image article")%>
+              </div>
+              <div class="item">
+                <%= image_tag( "logo/logo_numeripole.png",  alt: "image article")%>
+              </div>
+              <div class="item">
+                <%= image_tag( "logo/Logo_UE_FEADER.png",  alt: "image article")%>
+              </div>
+            </div>
           </div>
         </div>
       </div>
