--- a/app/assets/stylesheets/front/surveys/index.scss
+++ b/app/assets/stylesheets/front/surveys/index.scss
@@ -38,6 +38,23 @@ header {
   }
 }
 
+.survey__col {
+  width: 100%;
+  height: 250px;
+  margin:0 auto;
+  background-color: darkgrey;
+  position: relative;
+  .survey__col-content {
+    position: absolute;
+    top: 10px;
+    left:10px;
+    right: 10px;
+    bottom: 10px;
+    padding: 5px;
+    border: 2px solid white;
+  }
+}
+
 #survey__infos {
   margin-bottom: 150px;
   padding-top: 50px;
