--- a/app/views/partials/frontend/_footer.html.erb
+++ b/app/views/partials/frontend/_footer.html.erb
@@ -2,8 +2,8 @@
       <div class="mask"></div>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-md-4">
-              <%= image_tag( "logo.png",  alt: "logo meusetech", class:"img-responsive", size: "250x250")%>
+          <div class="col-xs-12 col-md-4" style="text-align:center;">
+              <%= image_tag( "logo/Mt_white.png",  alt: "logo meusetech", size: "250x250")%>
           </div>
           <div class="col-xs-12 col-md-4">
             <h3>Informations</h3>
