--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -55,37 +55,46 @@ meta title: "Meusetech - Sondages",
 
           <% if index === 0  %>
             <div class="col-xs-12">
-              <h2><%= link_to survey.title , survey_path( survey.id ) %> <%= (survey.end_at > Date.today) ? "<span class='label label-warning pull-right'>En cours</span>".html_safe : "<span class='label label-danger pull-right'>Terminé</span>".html_safe %></h2>
-              <p>
-                <%= raw survey.description %>
-              </p>
-              <%= survey.nbUsersResponded.size %> utilisateur<%= (survey.nbUsersResponded.size > 1 ) ? "s": "" %> <%= (survey.nbUsersResponded.size > 1 ) ? "ont": "a" %> répondu<%= (survey.nbUsersResponded.size > 1 ) ? "s": "" %></li>
-              <% if survey.end_at > Date.today %>
-                <% if user_signed_in? %>
-                  <%= link_to "Participer au sondage" , survey_url( survey.id ), class: "pull-right btn btn-default" %>
+              <div class="survey__one">
+                <h2><%= link_to survey.title , survey_path( survey.id ) %> <%= (survey.end_at > Date.today) ? "<span class='label label-warning pull-right'>En cours</span>".html_safe : "<span class='label label-danger pull-right'>Terminé</span>".html_safe %></h2>
+                <p>
+                  <%= raw survey.description %>
+                </p>
+                <%= survey.nbUsersResponded.size %> utilisateur<%= (survey.nbUsersResponded.size > 1 ) ? "s": "" %> <%= (survey.nbUsersResponded.size > 1 ) ? "ont": "a" %> répondu<%= (survey.nbUsersResponded.size > 1 ) ? "s": "" %></li>
+                <% if survey.end_at > Date.today %>
+                  <% if user_signed_in? %>
+                    <%= link_to "Participer au sondage" , survey_url( survey.id ), class: "pull-right btn btn-default" %>
+                  <% else %>
+                    <%= link_to "Participer au sondage" , new_session_path(:user), class:'pull-right btn btn-default' %>
+                  <% end %>
                 <% else %>
-                  <%= link_to "Participer au sondage" , new_session_path(:user), class:'pull-right btn btn-default' %>
+                  <%= link_to "Voir les résultats" , surveyStats_url( survey.id ), class: "pull-right btn btn-default" %>
                 <% end %>
-              <% else %>
-                <%= link_to "Voir les résultats" , surveyStats_url( survey.id ), class: "pull-right btn btn-default" %>
-              <% end %>
+              </div>
+
             </div>
           <% else %>
             <div class="col-xs-4">
-              <h2><%= link_to survey.title , survey_path( survey.id ) %> <%= (survey.end_at > Date.today) ? "<span class='label label-warning pull-right'>En cours</span>".html_safe : "<span class='label label-danger pull-right'>Terminé</span>".html_safe %></h2>
-              <p>
-                <%= raw survey.description %>
-              </p>
-              <%= survey.nbUsersResponded.size %> utilisateur<%= (survey.nbUsersResponded.size > 1 ) ? "s": "" %> <%= (survey.nbUsersResponded.size > 1 ) ? "ont": "a" %> répondu<%= (survey.nbUsersResponded.size > 1 ) ? "s": "" %></li>
-              <% if survey.end_at > Date.today %>
-                <% if user_signed_in? %>
-                  <%= link_to "Participer au sondage" , survey_url( survey.id ), class: "pull-right btn btn-default" %>
-                <% else %>
-                  <%= link_to "Participer au sondage" , new_session_path(:user), class:'pull-right btn btn-default' %>
-                <% end %>
-              <% else %>
-                <%= link_to "Voir les résultats" , surveyStats_url( survey.id ), class: "pull-right btn btn-default" %>
-              <% end %>
+              <div class="survey__col">
+                <div class="survey__col-content">
+                  <h2><%= link_to survey.title , survey_path( survey.id ) %> <%= (survey.end_at > Date.today) ? "<span class='label label-warning pull-right'><i class='fa fa-close'></i></span>".html_safe : "<span class='label label-danger pull-right'>Terminé</span>".html_safe %></h2>
+                  <p>
+                    <%= raw survey.description %>
+                  </p>
+                  <%= survey.nbUsersResponded.size %> utilisateur<%= (survey.nbUsersResponded.size > 1 ) ? "s": "" %> <%= (survey.nbUsersResponded.size > 1 ) ? "ont": "a" %> répondu<%= (survey.nbUsersResponded.size > 1 ) ? "s": "" %></li>
+                  <% if survey.end_at > Date.today %>
+                    <% if user_signed_in? %>
+                      <%= link_to "Participer au sondage" , survey_url( survey.id ), class: "pull-right btn btn-default" %>
+                    <% else %>
+                      <%= link_to "Participer au sondage" , new_session_path(:user), class:'pull-right btn btn-default' %>
+                    <% end %>
+                  <% else %>
+                    <%= link_to "Voir les résultats" , surveyStats_url( survey.id ), class: "pull-right btn btn-default" %>
+                  <% end %>
+                </div>
+
+              </div>
+
             </div>
           <% end %>
 
