--- a/app/views/partials/frontend/_menu.html.erb
+++ b/app/views/partials/frontend/_menu.html.erb
@@ -15,7 +15,7 @@
                   <% if current_user.is_admin %>
                     <%= link_to "<i class='fa fa-dashboard' aria-hidden='true'></i> Administration".html_safe, admin_dashboard_url,  data: { turbolinks: 'false' }  %>
                   <% end %>
-                  <a href="#"><i class="fa fa-mobile" aria-hidden="true"></i> Notifications</a>
+                  <%= link_to @notifications.count > 0 ? "<i class='fa fa-mobile' aria-hidden='true'></i> Notifications <span class='label label-warning'>#{@notifications.count}</span>".html_safe : "<i class='fa fa-mobile' aria-hidden='true'></i> Notifications".html_safe, users_Notifs_url %>
                   <%= link_to "<i class='fa fa-globe' aria-hidden='true'></i> Mon espace perso".html_safe, users_Account_url %>
                 <% end %>
               </div>
