--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@ meta title: "Meusetech - Accueil",
       <div class="container">
         <div class="row"  id="interactionContainer">
           <div class="interaction-one col-md-4 col-sm-12" id="MainSigneBlock">
-            <a href="#"  class="interaction-img" >
+            <a href="users/sign_up"  class="interaction-img" >
               <%= inline_svg("svg/Sinscrire.svg") %>
 
             <h2>Je m'inscris</h2></a>
@@ -46,7 +46,7 @@ meta title: "Meusetech - Accueil",
             </p>
           </div>
           <div class="interaction-one col-md-4 col-sm-12" id="DepotProjetBlock">
-            <a href="#"  class="interaction-img">
+            <a href="../projects/new"  class="interaction-img">
               <%= inline_svg("svg/DepotProjet.svg") %>
 
             <h2>Je dépose un projet</h2></a>
@@ -57,7 +57,7 @@ meta title: "Meusetech - Accueil",
             </p>
           </div>
           <div class="interaction-one col-md-4 col-sm-12" id="SondageBlock">
-            <a href="#"  class="interaction-img">
+            <a href="../surveys"  class="interaction-img">
               <%= inline_svg("svg/Sondage.svg") %>
 
             <h2>Je participe à un sondage</h2></a>
