--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,73 +1,78 @@
-<h2>Sign up</h2>
+<div class="container" style="text-align: center; color: #505050;">
+  <h2>S'inscrire</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :username, "Pseudo" %><br />
-    <%= f.text_field :username, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :first_name, "Prénom" %><br />
-    <%= f.text_field :first_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name, "Nom" %><br />
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <div id="locationField">
-        <%= label("",:Ville) %><br />
-        <%= text_field_tag 'autocomplete' %>
+    <div class="field">
+      <%= f.label :username, "Pseudo" %><br />
+      <%= f.text_field :username, autofocus: true, class: "form-control", style: "width: 33%; margin-left: 33%;"%>
     </div>
 
-    <%= f.hidden_field :city, id:"locality" %>
-    <%= f.hidden_field :cp, id:"postal_code" %>
-    <%= f.hidden_field :country, id:"country" %>
-  </div>
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, class: "form-control", style: "width: 33%; margin-left: 33%;"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "off", class: "form-control", style: "width: 33%; margin-left: 33%;"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", style: "width: 33%; margin-left: 33%;"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :first_name, "Prénom" %><br />
+      <%= f.text_field :first_name , class: "form-control", style: "width: 33%; margin-left: 33%;"%>
+    </div>
+
+    <div class="field">
+      <%= f.label :last_name, "Nom" %><br />
+      <%= f.text_field :last_name , class: "form-control", style: "width: 33%; margin-left: 33%;"%>
+    </div>
+
+    <div class="field">
+      <div id="locationField">
+          <%= label("",:Ville) %><br />
+          <%= text_field_tag 'autocomplete' %>
+      </div>
+
+      <%= f.hidden_field :city, id:"locality" %>
+      <%= f.hidden_field :cp, id:"postal_code" %>
+      <%= f.hidden_field :country, id:"country" %>
+    </div>
 
 
-  <div class="field">
-    <%= f.label :territory_attachment, "Attachement au territoire" %><br />
-    <%= f.select :territory_attachment, options_for_select(["Domicile", "Travail", "Loisirs", "Originaire du territoire", "Autre"], :selected => "Domicile"), {}, :onChange=>"javascript: changeHiddenInput(this);"  %><br />
-  </div>
+    <div class="field">
+      <%= f.label :territory_attachment, "Attachement au territoire" %><br />
+      <%= f.select :territory_attachment, options_for_select(["Domicile", "Travail", "Loisirs", "Originaire du territoire", "Autre"], :selected => "Domicile"), {}, :onChange=>"javascript: changeHiddenInput(this);"  %><br />
+    </div>
 
-  <div class="field", style="display:none", id="hiddenDiv">
-    <%= f.label :territory_attachment, "Précisez :" %><br />
-    <%= f.text_field :territory_attachment, id:"hiddenInput" %>
-  </div><br/>
+    <div class="field", style="display:none", id="hiddenDiv">
+      <%= f.label :territory_attachment, "Précisez :" %><br />
+      <%= f.text_field :territory_attachment, id:"hiddenInput" %>
+    </div><br/>
 
-  <div class="field">
-      <%= f.label :is_registered, "Recevoir la newsletter" %>
-      <%= f.check_box(:is_registered, {checked: true}) %>
-  </div>
+    <div class="field">
+        <%= f.label :is_registered, "Recevoir la newsletter" %>
+        <%= f.check_box(:is_registered, {checked: true}) %>
+    </div>
 
-  <%= raw recaptcha_tags %>
+    <div class="captcha-div" style="margin-left: 37%;">
+      <%= raw recaptcha_tags %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="actions">
+      <%= f.submit "Sign up" %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+
+</div>
