--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,8 +1,24 @@
-<div class="container-fluid">
+<%= stylesheet_link_tag 'front/projets/new', media: 'all', 'data-turbolinks-track' => true %>
+
+<header>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1>Bienvenue sur la plateforme participative et collaborative de Meuse Tech</h1>
+        <ul>
+          <li>Accueil</li>
+          <li>Déposer un projet</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
+
+<div class="container">
   <div class="project_form">
     <%= form_for :project, :url => projects_path do |f| %>
       <div class="form-group">
-        <%= label_tag 'project[category_id]', 'Categorie' %>
+        <%= label_tag 'project[category_id]', 'Categorie:' %>
         <%= select_tag "project[category_id]", options_from_collection_for_select(@categories, "id", "name") %>
       </div>
       <div class="form-group">
@@ -11,11 +27,11 @@
       </div>
       <div class="form-group">
         <%= label_tag 'content', 'Description de votre projet' %>
-        <%= f.text_area :content, class: "form-control" %>
+        <%= f.text_area :content, class: "form-control", size: "x10" %>
       </div>
       <div class="form-group">
         <%= label_tag 'content', 'Localisation' %>
-        <%= f.text_area :location %>
+        <%= f.text_field :location %>
       </div>
       <div class="form-group">
         <%= f.label :thumb, 'Image'%>
@@ -23,7 +39,7 @@
           <%= f.file_field :thumb %>
         </div>
       </div>
-      <%= f.submit :valider, class: "btn btn-primary" %>
+      <%= f.submit :Valider, class: "btn btn-primary" %>
     <% end %>
     <div class="form_errors">
       <% if @project.errors.any? %>
